refactor: reorganize package structure into auth/tryon/inventory/shared modules
Made-with: Cursor